# shondesh

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  snyk.yml
shondesh/: __init__.py
shondesh/channels/: __init__.py  base.py  channel_factory.py  email.py  slack.py  telegram.py  webhook.py
shondesh/formatters/: base_formatter.py  dict_table_formatter.py  slack_message_formatter.py  telegram_message_formatter.py
shondesh/utils/: constants.py
tests/channels/: test_channel_factory.py  test_telegram.py
tests/shondesh/channels/: test_email.py  test_slack.py  test_telegram.py  test_webhook.py
tests/shondesh/formatters/: test_dict_table_formatter.py  test_slack_message_formatter.py  test_telegram_message_formatter.py
tests/shondesh/utils/: test_constants.py
